--- a/power_law.html
+++ b/power_law.html
@@ -703,8 +703,8 @@ Teugels.</p>
 <li>Fréchet distribution (notice that the Gumbel is not in the
 list)</li>
 <li>q-Gaussian distribution</li>
-<li>Log-Cauchy distribution (“super heavy tail” - heavier than
-Pareto)</li>
+<li>Log-Cauchy distribution (“super heavy tail” - heavier than Pareto)
+10 Erlang</li>
 </ol>
 <p><strong>Two-tailed:</strong></p>
 <ol start="10" style="list-style-type: decimal">
@@ -859,6 +859,23 @@ variable whose logarithm is distributed in accordance with a Cauchy
 distribution. If <span class="math inline">\(X\)</span> is a random
 variable with a Cauchy distribution, then <span class="math inline">\(Y
 = \exp(X)\)</span> has a log-Cauchy distribution.</p>
+</div>
+<div id="erlang-distribution" class="section level4">
+<h4>Erlang distribution:</h4>
+<p>The Erlang distribution is subexponential. From Wikipedia:</p>
+<blockquote>
+<p>The Erlang distribution is the distribution of a sum of <span class="math inline">\(k\)</span> independent exponential variables with
+mean <span class="math inline">\(1/λ\)</span> each. Equivalently, it is
+the distribution of the time until the <span class="math inline">\(k\)</span>-th event of a Poisson process with a
+rate of <span class="math inline">\(λ\)</span>. The Erlang and Poisson
+distributions are complementary, in that while the Poisson distribution
+counts the events that occur in a fixed amount of time, the Erlang
+distribution counts the amount of time until the occurrence of a fixed
+number of events. When <span class="math inline">\(k=1\)</span>, the
+distribution simplifies to the exponential distribution. The Erlang
+distribution is a special case of the gamma distribution in which the
+shape of the distribution is discretized.</p>
+</blockquote>
 <hr />
 <div id="subexponential-distributions-1" class="section level5">
 <h5><strong>Subexponential distributions:</strong></h5>
