--- a/index.html
+++ b/index.html
@@ -441,6 +441,10 @@ Gaussian Distribution: Random Sampling and the Cholesky</a>
 distribution</a>
 </p>
 <p>
+<a href="http://rinterested.github.io/statistics/gamma_distribution.html">Gamma
+Distribution</a>
+</p>
+<p>
 <a href="http://rinterested.github.io/statistics/power_law.html">Power-law,
 Heavy &amp; Fat-Tailed Distributions</a>
 </p>
