--- a/gamma_distribution.html
+++ b/gamma_distribution.html
@@ -585,6 +585,16 @@ of arrival</strong> <span class="math inline">\(T_n\)</span>:</li>
 exponentials.</p>
 <p>The gamma is the continuous-time analogue of the negative
 binomial.</p>
+<ol start="5" style="list-style-type: decimal">
+<li><strong>Beta</strong>: Fraction of time in a queue (‘the bank and
+post office’) explained <a href="https://youtu.be/2LR5JYbhyjg?si=7HbyIQ3mwXPxIpsW&amp;t=60">here</a>.
+The time waiting in the bank is <span class="math inline">\(X \sim
+\text{Gamma}(a,\lambda)\)</span> (e.g. <span class="math inline">\(a
+=5\)</span> people waiting in line) with <span class="math inline">\(Y
+\sim \text{Gamma}(b, \lambda)\)</span> waiting at the post office. Now
+<span class="math inline">\(W = X / (X + Y)\)</span> follows a beta
+distribution <span class="math inline">\(\text{Beta}(a,b).\)</span></li>
+</ol>
 <hr />
 <p><a href="http://rinterested.github.io/statistics/index.html">Home
 Page</a></p>
