--- a/gamma_distribution.html
+++ b/gamma_distribution.html
@@ -519,10 +519,10 @@ X_i^2\)</span> follows a gamma distribution.</li>
 \color{red}{\frac{x}{\sigma^2}\,e^{-x^2/2\sigma^2}}\]</span></p>
 <ol start="11" style="list-style-type: decimal">
 <li><strong>F or Snedecor’s Distribution</strong>: It is the ratio
-distribution of two iid chi square distributions with d.f. <span class="math inline">\(d_1\)</span> and <span class="math inline">\(d_2\)</span>:</li>
+distribution of two iid chi square distributions with d.f. <span class="math inline">\(u\)</span> and <span class="math inline">\(v\)</span>:</li>
 </ol>
-<p><span class="math display">\[X = \frac{U_1/d_1}{U_2/d_2}\]</span> The
-pdf is (<a href="https://statproofbook.github.io/P/f-pdf.html">reference</a>):</p>
+<p><span class="math display">\[X = \frac{U_1/u}{U_2/v}\]</span> The pdf
+is (<a href="https://statproofbook.github.io/P/f-pdf.html">reference</a>):</p>
 <p><span class="math display">\[f_F(f) =
 \frac{\color{orange}\Gamma\left( \frac{u+v}{2}
 \right)}{\color{orange}\Gamma\left( \frac{u}{2} \right) \cdot
