--- a/index.html
+++ b/index.html
@@ -441,6 +441,10 @@ Gaussian Distribution: Random Sampling and the Cholesky</a>
 distribution</a>
 </p>
 <p>
+<a href="http://rinterested.github.io/statistics/gamma_function.html">Gamma
+Function (Medium article with LaTeX transcription)</a>
+</p>
+<p>
 <a href="http://rinterested.github.io/statistics/gamma_distribution.html">Gamma
 Distribution</a>
 </p>
