--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ distribution</a>
 </p>
 <p>
 <a href="http://rinterested.github.io/statistics/gamma_function.html">Gamma
-Function (Medium article with LaTeX transcription)</a>
+Function</a>
 </p>
 <p>
 <a href="http://rinterested.github.io/statistics/gamma_distribution.html">Gamma
@@ -1072,13 +1072,13 @@ Pushforward and the Pullback</a>
 <a href="http://rinterested.github.io/statistics/lie_group_lie_algebra.html">Calculating
 the Lie Algebra of SL(2,C)</a>
 </p>
+</div>
 <p><br><br></p>
 <hr />
 <p><a href="http://rinterested.github.io/statistics/index.html">Home
 Page</a></p>
 <p><strong>NOTE: These are tentative notes on different topics for
 personal use - expect mistakes and misunderstandings.</strong></p>
-</div>
 </div>
 
 
