--- a/padics.html
+++ b/padics.html
@@ -481,7 +481,7 @@ p+ \dots \right) \]</span></p>
 <p><span class="math display">\[3\mod(5)\equiv-2= 3\left(a_3\, p+ \dots
 \right) \]</span></p>
 <p>yielding</p>
-<p><span class="math inline">\(a_3=1\)</span></p>
+<p><span class="math display">\[a_3=1\]</span></p>
 <p>And so on.</p>
 <p>Notice that this would break if we tried <span class="math inline">\(1/24\)</span> in <span class="math inline">\(2\)</span>-adics:</p>
 <p><span class="math display">\[1=24 (a_0+ a_1 \,p + a_2
