--- a/padics.html
+++ b/padics.html
@@ -504,8 +504,7 @@ print(Zp(3)(3))
 ...000000000000000000010
 padic_printing.mode(&#39;series&#39;)
 print(Zp(3)(3))
-padic_printing.mode(&#39;series&#39;)
-print(Zp(3)(3))</code></pre>
+3 + O(3^21)</code></pre>
 <p>Notice that this is different from <span class="math inline">\(3 \mod
 2\)</span>, in which the series is <span class="math inline">\(3 = 1
 \times 2^0 + 1 \times 2^1\)</span>.</p>
