--- a/padics.html
+++ b/padics.html
@@ -623,6 +623,9 @@ appropriately by incorporating terms with negative exponents. Let’s
 consider an example in the <span class="math inline">\(5\)</span>-adic
 system: Let’s take <span class="math inline">\(1/25\)</span>. Convert to
 <span class="math inline">\(5\)</span>-adic Expansion: <span class="math inline">\(1/25=5^{−2}\)</span>.</p>
+</div>
+<div id="digits-to-the-right-of-the-period-in-p-adic-expressions-e.g.-.011" class="section level4">
+<h4>Digits to the right of the period in <span class="math inline">\(p\)</span>-adic expressions (e.g. <span class="math inline">\(.011\)</span>):</h4>
 <p>How are the finite digits (<span class="math inline">\(.011\)</span>)
 to the right of the period calculated in an expression such as <span class="math inline">\(...10101010101010101.011\)</span>, and where do
 they come from?</p>
