--- a/padics.html
+++ b/padics.html
@@ -401,6 +401,12 @@ results for the metric. For instance, with <span class="math inline">\(p=7\)</sp
 <p>whereas</p>
 <p><span class="math display">\[\left|  3-2\right|_{7}=
 \left|  1\right|_{7}= \left| 7^0  \right|_{7} = 7^{0}=1\]</span></p>
+<p>This determines other seemingly puzzling results, such as the fact
+that in the <span class="math inline">\(2\)</span>-adic sense</p>
+<p><span class="math display">\[1 + 2 + 2^2 + 2^3 + 2^4 +
+\cdots=\frac{1}{1-2}=-1\]</span></p>
+<p>makes sense, based on the fact that the added values (in <span class="math inline">\(2\)</span>-adic) are getting smaller and smaller.
+This is presented by 3B1B in <a href="https://youtu.be/XFDM1ip5HdU?si=dQpqMighSDTuanK8">here</a>.</p>
 <hr />
 </div>
 <div id="fractions" class="section level4">
