--- a/padics.html
+++ b/padics.html
@@ -407,6 +407,14 @@ that in the <span class="math inline">\(2\)</span>-adic sense</p>
 \cdots=\frac{1}{1-2}=-1\]</span></p>
 <p>makes sense, based on the fact that the added values (in <span class="math inline">\(2\)</span>-adic) are getting smaller and smaller.
 This is presented by 3B1B in <a href="https://youtu.be/XFDM1ip5HdU?si=dQpqMighSDTuanK8">here</a>.</p>
+<p>Examples in <span class="math inline">\(\mathbb Q_5\)</span></p>
+<p><span class="math display">\[
+(1)_{\mathbb Q_5} =1\\
+(5)_{\mathbb Q_5} = (0+ 1\times 5)_{\mathbb Q_5}=10\\
+(-1)_{\mathbb Q_5}=(4 + 4 \cdot 5 + 4 \cdot5^2+\cdots)_{\mathbb
+Q_5}=...4444
+\]</span> because adding <span class="math inline">\(...4444\)</span> to
+<span class="math inline">\(1\)</span>, which is <span class="math inline">\(...000001\)</span> will result in <span class="math inline">\(0\)</span> (additive inverse of one).</p>
 <hr />
 </div>
 <div id="fractions" class="section level4">
